--- a/blastOff.html
+++ b/blastOff.html
@@ -16,7 +16,7 @@
         var theTime= new Date();
         var tempTime = new Date();
         var lastIteration = 0;
-        var time_interval = 500;
+        var time_interval = 5000;
         var running =true;
         var index = 0;
         var timer;
@@ -51,28 +51,28 @@
             <tr id="seconds"></tr>
             <tr id="Latitude"></tr>
             <tr id="Longitude"></tr>
-            <tr id=" GpsSensor_alt"></tr>
-            <tr id=" BPMSensor_alt"></tr>
-            <tr id=" BMPSensor_pres"></tr>
-            <tr id=" BMPSensor_temp"></tr>
-            <tr id=" digSensor_temp"></tr>
-            <tr id=" CSSSensor_temp"></tr>
-            <tr id=" CSSSensor_eCO2"></tr>
-            <tr id=" CSSSensor_TVOC"></tr>
-            <tr id=" UV"></tr>
-            <tr id=" accelX"></tr>
-            <tr id=" accelY"></tr>
-            <tr id=" accelZ"></tr>
-            <tr id=" magneticX"></tr>
-            <tr id=" magneticY"></tr>
-            <tr id=" magneticZ"></tr>
-            <tr id=" gyrowX"></tr>
-            <tr id=" GyrowY"></tr>
-            <tr id=" gyrowZ"></tr>
+            <tr id="GpsSensor_alt"></tr>
+            <tr id="BPMSensor_alt"></tr>
+            <tr id="BMPSensor_pres"></tr>
+            <tr id="BMPSensor_temp"></tr>
+            <tr id="digSensor_temp"></tr>
+            <tr id="CSSSensor_temp"></tr>
+            <tr id="CSSSensor_eCO2"></tr>
+            <tr id="CSSSensor_TVOC"></tr>
+            <tr id="UV"></tr>
+            <tr id="accelX"></tr>
+            <tr id="accelY"></tr>
+            <tr id="accelZ"></tr>
+            <tr id="magneticX"></tr>
+            <tr id="magneticY"></tr>
+            <tr id="magneticZ"></tr>
+            <tr id="gyrowX"></tr>
+            <tr id="gyrowY"></tr>
+            <tr id="gyrowZ"></tr>
         </tbody>
     </table>
     <br>
-     The Current Time Is: <div id = "timeStamp"> Press The Start for the Current Time</div>
+     The Current Time Is...: <div id = "timeStamp"> Press The Start for the Current Time</div>
 
     <body>
         
@@ -91,7 +91,6 @@
         <br>
         <br>
         <button class="lgButton" onclick="playTheBells();">Play Station music</button>
-
         <h3>Let's play Craps!!!!</h3>
         <div id="Crapsresults"> Craps Results</div>
         <div id="Die1results"> Die1 Results</div>
